--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,8 +10,29 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
-.navbar .navbar-menu
+body
+  margin: 0 !important
+
+.navbar
   box-shadow: none !important
+
+.navbar-menu
+  box-shadow: none !important
+  background-color: red
+  margin: 0 !important
+  margin-left: 0 !important
+  margin-right: 0 !important
+
+.navbar-item .icon
+  color: $primary
+
+.navbar-brand
+  padding: 0 1rem
+  background-color: red
+
+
+.navbar-item.logo
+  padding: 0 1rem
 
 .content .taglist
   list-style: none
@@ -69,17 +90,14 @@ $black: #2b2523
     transition: all .15s ease
 
 .margin-top-0
-  margin-top: 0 !important
+    margin-top: 0 !important
 
-.navbar-item .icon
-  color: $primary
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
-.navbar-brand .navbar-item.logo
-  padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
@@ -93,15 +111,17 @@ $menu-item-active-background-color:	$kaldi-red-invert
 $menu-list-border-left: 1px solid $kaldi-red-invert
 $menu-label-color: $white-ter
 
-
 .menu-label
   font-size: 1em !important
   text-align: left
+
 .menu-list
   list-style: none !important
   text-align: left
+
 .social
   padding: 2em
+
 .social a
     padding: .5em .5em .3em .5em
     border-radius: 1em
@@ -115,16 +135,16 @@ $menu-label-color: $white-ter
 // blog roll
 .blog-list-item.is-featured
   background-color: #d6400033
+
 .blog-list-item header
   display: flex
   margin-bottom: 1em
+
 .blog-list-item .featured-thumbnail
   flex-basis: 35%
   margin: 0 1.5em 0 0
 
-
 @import "~bulma"
-
 
 // responsiveness
 +tablet-only
